fixed overlap spacing issue

--- a/website/static/CSS/style.css
+++ b/website/static/CSS/style.css
@@ -15,7 +15,6 @@
 .info-container-2 {
   position: absolute;
   width: 100vw;
-  height: 100vh;
   top: 15%;
   text-align: center;
   color: white;
